k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-app
  namespace: rancher-app
  labels:
    app: rancher-app
spec:
  type: ClusterIP
  selector:
    app: rancher-app
  ports:
    - port: 80
      targetPort: http
      name: http
