k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-app
  namespace: rancher-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.kravix.ch
      secretName: rancher-app-tls
  rules:
    - host: app.kravix.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher-app
                port:
                  name: http
